# hal

./: .envrc  .gitignore  Cargo.toml  README.md  codemcp.toml  format.sh  gemini-python.md
.cursor/rules/: debug-tui.md  mdc_rules_location.md  rust-api-design.md  rust-async.md  rust-error-handling.md  rust-iterative-development.md  rust-macros.md  rust-ownership-borrowing.md  rust-performance.md  rust-project-structure.md  rust-testing.md  rust-tracing.md  rust-unsafe.md
.flox/: env.json
.flox/env/: manifest.toml
.hal/: fmt.sh  lint.sh
.hal/prompts/: analyze-codebase.md
docs/: agent-loop.md  developer.md  event-driven-tui.md  gemini-api.md  mcp-migration.md  pro-tools.md  rag-architect.md  rmcp.md  spider.md  tool-perms.md  tui-enhancement.md
examples/: chat.rs  coder.rs
src/: batches.rs  caches.rs  chats.rs  client.rs  coder.rs  crawler.rs  error.rs  files.rs  gemini.rs  http.rs  index.rs  lib.rs  main.rs  markdown.rs  mcp.rs  model.rs  models.rs  processor.rs  search.rs  telemetry.rs  tools.rs  tui.rs  tunings.rs  types.rs
src/coder/: config.rs  error.rs  events.rs  executor.rs  session.rs
src/crawler/: config.rs  content_extraction.rs  error.rs  mod.rs  spider_integration.rs  storage.rs
src/gemini/: batches.rs  caches.rs  chats.rs  client.rs  files.rs  http.rs  models.rs  tunings.rs  types.rs
src/index/: database.rs  error.rs  mod.rs  schema.rs
src/mcp/: adaptor.rs  code.rs  config.rs  executor.rs  file_utils.rs  mod.rs  permissions.rs  shell_utils.rs  tool_core.rs  tool_file.rs  tool_search.rs  tool_shell.rs  tools.rs  tools_rmcp.rs
src/model/: embedding.rs  mock_model.rs  ratelimited_completion.rs  ratelimited_embedding.rs
src/processor/: chunking.rs  config.rs  embedding.rs  error.rs  llm_integration.rs  mod.rs
src/search/: error.rs  mod.rs  search.rs  search_impl.rs
src/tools/: code.rs  error.rs  executor.rs  file.rs  permissions.rs  project.rs  shared.rs
src/tui/: app.rs  error.rs  event.rs  logging.rs  markdown.rs  mod.rs  scroll.rs  scrollbar.rs  ui.rs
tools/: format.rs
