[package]
name = "hal"
version = "0.1.0"
edition = "2021"
description = "A Rust client for Google's Gemini AI API"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4.1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
async-trait = "0.1"
url = "2.3"
base64 = "0.21"
futures = "0.3"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
pulldown-cmark = "0.13.0"
ratatui = "0.24.0"
crossterm = "0.27.0"
unicode-width = "0.1.11"

[dev-dependencies]
mockito = "1.0"
tokio-test = "0.4"
lazy_static = "1.5.0"
