[package]
name = "hal"
version = "0.1.0"
edition = "2021"
description = "A Rust client for Google's Gemini AI API"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4.1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
async-trait = "0.1"
url = "2.3"
base64 = "0.21"
futures = "0.3"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
pulldown-cmark = "0.13.0"
ratatui = "0.29.0"
crossterm = { version = "0.28.0", features = ["event-stream"] }
unicode-width = "0.1.11"
clap = { version = "4.5.3", features = ["derive"] }
rand = "0.8.5"
# RAG feature dependencies
spider = "1.0.0"
scraper = "0.18.1"
libsql = "0.6.0"
html2md = "0.2.14"
tokio-stream = "0.1.14"
chrono = { version = "0.4.31", features = ["serde"] }
semver = "1.0.20"

[dev-dependencies]
mockito = "1.0"
tokio-test = "0.4"
lazy_static = "1.5.0"
tempfile = "3.10.1"
