[package]
name = "hal"
version = "0.1.0"
edition = "2021"
description = "A Rust framework for building LLM-powered RAG applications"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
url = "2.3"
futures = "0.3"
pulldown-cmark = "0.13.0"
ratatui = "0.29.0"
crossterm = { version = "0.28.0", features = ["event-stream"] }
unicode-width = "0.1.11"
clap = { version = "4.5.3", features = ["derive"] }
spider = { version = "2.34.2", features = ["regex"] }
scraper = "0.18.1"
libsql = "0.6.0"
tokio-stream = "0.1.14"
chrono = { version = "0.4.31", features = ["serde"] }
semver = "1.0.20"
indicatif = "0.17.8"
rig-core = "0.9.1"
governor = "0.8.1"
tracing-appender = "0.2.3"
opentelemetry = "0.28.0"
opentelemetry_sdk = "0.28.0"
tracing-opentelemetry = "0.29.0"
opentelemetry-stdout = "0.28.0"
anyhow = "1.0.97"
opentelemetry-otlp = "0.28.0"
opentelemetry-appender-tracing = "0.28.1"
spider_utils = { version = "2.34.2", features = ["transformations"] }
regex = "1.11.1"
quick-xml = { version = "0.37.2", features = ["serialize"] }
mcpr = { git = "https://github.com/conikeec/mcpr", rev = "95052a673adaf7a900003b55a1b121d935b70a41" }
async-trait = "0.1"
yek = "0.21.0"

[dev-dependencies]
mockito = "1.0"
tokio-test = "0.4"
lazy_static = "1.5.0"
tempfile = "3.10.1"
